--- a/src/App.css
+++ b/src/App.css
@@ -1,218 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
-
-.container {
-  display: flex;
-  height: 100vh;
-  background-color: #888782;
-}
-
-.topcontainer {
-  display: flex;
-  position: fixed;
-  width: 100%;
-  justify-content: space-around;
-  height: 15%;
-}
-
-.logo {
-  margin-top: 1.5%;
-  font-size: 65px;
-  height: 80px;
-  width: 200px;
-  margin-left: 0px;
-  margin-right: 50px;
+.App {
   text-align: center;
-  border-radius: 50px;
-  font-family: "Londrina Solid", sans-serif;
-  color: rgb(39, 30, 118);
-  border-radius: 50%;
-  box-shadow: 2.5px 2.5px rgb(104, 107, 109);
-  background-color: rgb(231, 244, 255);
 }
 
-.title {
-  padding-top: 3%;
-  font-size: 70px;
-  font-weight: bold;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
-  text-shadow: 3px 3px 0px rgb(201, 201, 0);
 }
 
-.timer {
-  margin-top: 4%;
-  font-size: 30px;
-  width: 250px;
-  height: 60px;
-  background-color: white;
-  text-align: center;
-  border-radius: 40px;
-  border-style: solid;
-  border-width: 4px;  
-  border-color: black gray black gray;
-  font-family: "Londrina Solid", sans-serif;
-  font-weight: 600;
-  line-height: 54px;
+.App-link {
+  color: #61dafb;
 }
 
-.leftcontainer {
-  width: 10%;
-  padding-top: 180px;
-  flex-grow: 1;
-  text-align: center;
-  align-items: center;
-  margin-right: 4%;
-  margin-left: 6%;
-}
-
-.profile {
-  background-color: #F9D8B7;
-  margin-top: 15px;
-  height: 200px;
-  border-radius: 20px;
-  box-shadow: 3.5px 3.5px 1px #303131;
-  border: 2px solid #717372;
-}
-
-.profile_name {
-  line-height: 50px;
-  margin-top: 10px;
-  font-size: x-large;
-}
-
-.profile_major {
-  line-height: 30px;
-  font-size: large;
-}
-
-.profile_name {
-  line-height: 55px;
-}
-
-.what {
-  background-color: #F9D8B7;
-  margin-top: 80px;
-  height: 280px;
-  border-radius: 20px;
-  box-shadow: 3.5px 3.5px 1px #303131;
-  line-height: 280px;
-  border: 2px solid #717372;
-}
-
-.centercontainer {
-  padding-top: 180px;
-  width: 60%;
-  display: flex;
-  text-align: center;
-  display: inline-block;
-}
-
-.wordbox {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  grid-gap: 5px;
-  grid-row-gap: 14px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 25px;
-  padding-top: 25px;
-  font-size: 23px;
-  border: 5px solid #263440;
-  box-shadow: 0px 0px 10px #263440;
-  background-color: #F5DBBA;
-  border-radius: 10%;
-  font-family: "Noto Sans KR", sans-serif;
-  font-weight: 500;
-}
-
-.text {
-  background-color: #2D3E4E;
-  color: #F5DBBA;
-  text-decoration: none;
-  border-radius: 10px;
-  padding-top: 2px;
-  padding-bottom: 3px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.inputbox input{
-  height: 40px;
-  border-radius: 10px;
-  margin-top: 30px;
-  width: 45%;
-  text-align: center;
-  font-size: x-large;
-  font-family: "Noto Sans KR", sans-serif;
-  font-weight: 500;
-}
-
-.rightcontainer {
-  padding-top: 180px;
-  width: 10%;
-  flex-grow: 1;
-  text-align: center;
-  align-items: center;
-  margin-right: 7%;
-  margin-left: 3%;
-}
-
-.rankbox {
-  background-color: white;
-  margin-top: 50px;
-  height: 560px;
-  border-radius: 20px;
-  background-color: #898987;
-}
-
-.rankbox_first {
-  background-color: #243644;
-  color: bisque;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 200px;
-  height: 110px;
-  line-height: 102px;
-  font-weight: bold;
-  border-radius: 15px;
-  border: 4px solid bisque;
-  font-family: "Noto Sans KR", sans-serif;
-  font-weight: 600;
-  font-size: x-large;
-}
-
-.rankbox_second {
-  background-color: #243644;
-  color: bisque;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 200px;
-  height: 110px;
-  line-height: 102px;
-  font-weight: bold;
-  border-radius: 15px;
-  border: 4px solid bisque;
-  font-family: "Noto Sans KR", sans-serif;
-  font-weight: 600;
-  margin-top: 80px;
-  font-size: x-large;
-}
-
-.rankbox_third {
-  background-color: #243644;
-  color: bisque;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 200px;
-  height: 110px;
-  line-height: 102px;
-  font-weight: bold;
-  border-radius: 15px;
-  border: 4px solid bisque;
-  font-family: "Noto Sans KR", sans-serif;
-  font-weight: 600;
-  margin-top: 80px;
-  font-size: x-large;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
