--- a/src/style/start.css
+++ b/src/style/start.css
@@ -1,7 +1,7 @@
 .start-container {
     width: 100%;
     height: 100vh;
-    background-color: #9CB4CC;
+    background-color: #8090a4;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,9 +9,10 @@
 }
 
 .start-container h1 {
-    font-size: 40px;
-    color: white;
-    text-shadow: 3px 3px black;
+    font-size: 45px;
+    font-weight: 900;
+    color: #F1F0E8;
+    -webkit-text-stroke: 2px #11324D;
 }
 
 .start-subcontainer {
@@ -19,65 +20,107 @@
     height: 450px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     position: relative;
+    background-color: #8d9fb5;
+    border: 2px solid #11324D;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s;
+}
+
+.start-subcontainer:hover {
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
 }
 
 .start-subcontainer__bar {
     width: 100%;
     height: 20px;
     position: absolute;
-    background-color: grey;
     top: 0;
     left: 0;
+    border-radius: 10px 10px 0 0;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 12px 15px;
+}
+
+.start-subcontainer__bar p {
+    color: #11324D;
+    font-size: 13px;
 }
 
 .left-subcontainer {
     width: 50%;
-    height: 100%;
+    height: calc(100% - 20px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: yellow;
-}
-
-.right-subcontainer {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
+    border-top: 2px solid #11324D;
+    background-color: #F7F6F2;
+    border-radius: 10px 0 0 10px;
+    box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s;
 }
 
 .input-box {
-    width: 100%;
+    width: 90%;
     height: 30px;
     display: flex;
     margin: 10px;
+    justify-content: space-between;
 }
 
-.input-label {
-    width: auto;
+.input-box div {
     height: 100%;
-    padding: 10px;
-    margin: auto;
-    background-color: grey;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1.5px solid #11324D;
+    border-radius: 40px 60px / 60px 40px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+}
+
+.input-box div p {
+    color: #11324D;
+    font-weight: 700;
 }
 
 .input-box input {
-    margin: auto;
     height: 100%;
+    background-color: white;
+    border: 1.5px solid #11324D;
+    border-radius: 60px 30px / 20px 40px;
+    transition: box-shadow 0.3s, transform 0.3s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.input-box input:hover {
+    transform: scale(1.05);
 }
 
 .promo-text {
-    background-color: lightblue;
-    padding: 5px 10px;
+    width: 90%;
+    height: 35px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: 10px;
+    transition: box-shadow 0.3s;
+}
+
+.promo-text p {
+    padding: 5px 15px;
+    border-radius: 80px 60px / 90px 60px;
+    font-weight: 400;   
+    border: 1.5px solid #11324D;
+    background-color: #7E94BF;
+    color: #11324D;
+    transition: box-shadow 0.3s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .start-container label {
@@ -88,4 +131,77 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+}
+
+.right-subcontainer {
+    width: 50%;
+    height: calc(100% - 20px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px solid #11324D;
+    background-color: #F7F6F2;
+    border-radius: 0 10px 10px 0;
+    padding: 20px;  
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s;
+}
+
+.right-subcontainer h3 {
+    font-size: 24px;
+    color: #11324D;
+    margin-bottom: 10px;
+}
+
+.right-subcontainer ul {
+    list-style: none;
+    padding: 0;
+}
+
+.right-subcontainer li {
+    font-size: 18px;
+    color: #333;
+    margin-bottom: 10px;
+    line-height: 1.5;
+    position: relative;
+    word-break: keep-all;
+}
+
+.right-subcontainer .highlight {
+    font-weight: bold;
+    color: #D9534F;
+    background-color: #F9F2F4;
+    padding: 2px 4px;
+    border-radius: 4px;
+}
+
+.start-button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.start-button-container label {
+    font-size: 18px;
+    color: #F1F0E8;
+    margin-bottom: 10px;
+}
+
+.start-button-container button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #11324D;  
+    color: #F1F0E8;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.2s, box-shadow 0.3s, transform 0.3s;
+}
+
+.start-button-container button:hover {
+    background-color: #0a2335;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    transform: scale(1.1);
 }
