--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@
   padding-right: 20px;
   padding-bottom: 25px;
   padding-top: 25px;
-  font-size: 23px;
+  font-size: 2.5vh;
   border: 5px solid #11324C;
   box-shadow: 0px 0px 15px #11324C;
   background-color: #F7F6F2;
@@ -159,7 +159,7 @@
   background-color: #11324C;
   color: #F7F6F2;
   text-decoration: none;
-  border-radius: 10px;
+  border-radius: 1vh;
   padding-top: 0.1vh;
   padding-bottom: 0.1vh;
   padding-left: 15px;
