--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body, html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-family: 'LINESeedKR';
 }
 
 
@@ -11,4 +12,25 @@ div,
 nav,
 input {
   box-sizing: border-box;
+}
+
+@font-face {
+  font-family: 'VITRO';
+  src: url('./font/VITRO CORE TTF.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'VITRO';
+  src: url('./font/VITRO INSPIRE TTF.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'VITRO';
+  src: url('./font/VITRO PRIDE TTF.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
