--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@ body, html {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  font-family: 'LINESeedKR';
-}
+  font-family: 'VITRO';}
 
 
 div,
