--- a/src/style/game.css
+++ b/src/style/game.css
@@ -18,7 +18,7 @@
   font-size: 7vh;
   font-weight: bold;
   color: white;
-  text-shadow: 4px 4px 0px #FF6F61;
+  text-shadow: 4px 4px 0px #c3803b;
   margin-right: 60vh;
   height: auto;
   font-weight: 900;
@@ -62,67 +62,65 @@
   flex-grow: 1;
   text-align: center;
   align-items: center;
-  margin-right: 5.5%;
-  margin-left: 4.5%;
+  margin-right: 7%;
+  margin-left: 3%;
   margin-top: 1vh;
 }
 
 .rankbox {
-  margin-top: 5.5vh;
-  padding-top: 3.7vh;
-  height: 60vh;
-  width: 120%;
-  border-radius: 1vh;
-  background-color: #95a8c1;
-  border: 0.5vh solid #11324C;
-  box-shadow: 3.5px 3.5px 1px #11324C;
+  background-color: white;
+  margin-top: 10vh;
+  height: 75vh;
+  width: 10%;
+  border-radius: 20px;
+  background-color: #808FA4;
 }
 
 .rankbox_first {
   background-color: #153c5a;
   color: rgb(237, 237, 237);
-  margin-left: 7%;
-  margin-right: 7%;
-  width: 86%;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 1260%;
   height: 12vh;
   line-height: 11vh;
   font-weight: bold;
-  border-radius: 0.5vh 1.5vh;
+  border-radius: 1.5vh;
   border: 0.5vh solid #b4b3b0;
   font-weight: 600;
-  font-size: 2.9vh;
+  font-size: 2.7vh;
 }
 
 .rankbox_second {
   background-color: #3c6482;
   color: rgb(237, 237, 237);
-  margin-left: 7%;
-  margin-right: 7%;
-  width: 86%;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 1260%;
   height: 12vh;
   line-height: 11vh;
   font-weight: bold;
-  border-radius: 0.5vh 1.5vh;
+  border-radius: 1.5vh;
   border: 0.5vh solid #d7d6d2;
   font-weight: 600;
   margin-top: 8vh;
-  font-size: 2.9vh;
+  font-size: 2.7vh;
 }
 
 .rankbox_third {
   background-color: #5a95c1;
   color: rgb(237, 237, 237);
-  margin-left: 7%;
-  margin-right: 7%;
-  width: 86%;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 1260%;
   height: 12vh;
   line-height: 11vh;
   font-weight: bold;
-  border-radius: 0.5vh 1.5vh;
+  border-radius: 1.5vh;
   border: 0.5vh solid #dedddb;
   font-weight: 600;
   margin-top: 8vh;
-  font-size: 2.9vh;
+  font-size: 2.7vh;
 }
 
 .centercontainer {
@@ -130,11 +128,12 @@
   display: flex;
   text-align: center;
   display: inline-block;
+  margin-top: 1vh;
 }
 
 .wordbox {
   margin-top: 3vh;
-  height: 67vh;
+  height: 70vh;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(12, 1fr);
@@ -142,8 +141,8 @@
   grid-row-gap: 14px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-bottom: 2vh;
-  padding-top: 2vh;
+  padding-bottom: 20px;
+  padding-top: 20px;
   font-size: 2.4vh;
   border: 6px solid #11324C;
   box-shadow: 0px 0px 8px #11324C;
@@ -171,7 +170,7 @@
   margin-top: 2vh;
   width: 45%;
   text-align: center;
-  font-size: x-large;
+  font-size: 60px;
   font-weight: 500;
 }
 
@@ -180,15 +179,15 @@
   flex-grow: 1;
   text-align: center;
   align-items: center;
-  margin-right: 6%;
-  margin-left: 4%;
+  margin-right: 5%;
+  margin-left: 5%;
   margin-top: 0.5vh;
 }
 
 .profile {
   background-color: #becfe3;
-  margin-top: 3.4vh;
-  height: 23vh;
+  margin-top: 4.4vh;
+  height: 25vh;
   border-radius: 20px;
   box-shadow: 3.5px 3.5px 1px #1D2636;
   border: 4px solid #1D2636;
@@ -207,8 +206,8 @@
 
 .profile img {
   margin-top: -3vh;
-  width: 80%;
-  height: 16vh;
+  width: 100%;
+  height: 18vh;
 }
 
 .ranking {
