--- a/src/style/start.css
+++ b/src/style/start.css
@@ -1,23 +1,36 @@
 .start-container {
     width: 100vw;
     height: 100vh;
-    background-color: #8090a4;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    position: absolute;
+    background: linear-gradient(140deg, #8090a4 40%, transparent 0%),
+                linear-gradient(190deg, #3b4755 50%, transparent 0%),
+                #6d8191;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.start-container * {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .start-container h1 {
+    font-family: 'VITRO';
     font-size: 45px;
     font-weight: 900;
     color: #F1F0E8;
     -webkit-text-stroke: 2px #11324D;
+    z-index: 3000;
 }
 
 .start-subcontainer {
     width: 950px;
-    height: 450px;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: end;
@@ -27,11 +40,14 @@
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s;
+    position: relative;
+    z-index: 3000;
 }
 
 .start-subcontainer:hover {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
 }
+
 
 .start-subcontainer__bar {
     width: 100%;
@@ -43,12 +59,12 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 12px 15px;
+    padding: 10px 15px;
 }
 
 .start-subcontainer__bar p {
     color: #11324D;
-    font-size: 13px;
+    font-size: 16px;
 }
 
 .left-subcontainer {
@@ -84,6 +100,8 @@
 .input-box div p {
     color: #11324D;
     font-weight: 700;
+    letter-spacing: 3px;
+    font-family: 'VITRO';
 }
 
 .input-box input {
@@ -112,7 +130,7 @@
 .promo-text p {
     padding: 5px 15px;
     border-radius: 80px 60px / 90px 60px;
-    font-weight: 400;
+    font-weight: 700;
     border: 1.5px solid #11324D;
     background-color: #7E94BF;
     color: #11324D;
@@ -148,6 +166,8 @@
     color: #11324D;
     margin: 0;
     text-align: center;
+    letter-spacing: 3px;
+    font-family: 'VITRO';
 }
 
 .right-subcontainer ul {
@@ -161,6 +181,7 @@
     color: #333;
     line-height: 1.6;
     position: relative;
+    font-weight: 400;
     word-break: keep-all;
 }
 
@@ -176,28 +197,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 3000;
 }
 
 .start-button-container label {
-    font-size: 18px;
+    font-family: 'VITRO';
+    font-size: 20px;
+    font-weight: 700;
     color: #F1F0E8;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
-.start-button-container button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #11324D;
-    color: #F1F0E8;
+.start-button-container div {
+    width: 90px;
+    height: 80px;
     border: none;
-    font-size: 18px;
     cursor: pointer;
-    transition: background-color 0.2s, box-shadow 0.3s, transform 0.3s;
+    background-image: url('../../public/image/enter.png');
+    transition: transform 0.3s;
+    background-size: 100% 100%;
+    background-position: center, center;
 }
 
-.start-button-container button:hover {
-    background-color: #0a2335;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+.start-button-container div:hover {
     transform: scale(1.1);
 }
