--- a/src/style/start.css
+++ b/src/style/start.css
@@ -22,11 +22,12 @@
 
 .start-container h1 {
     font-family: 'VITRO';
-    font-size: 45px;
+    font-size: 50px;
     font-weight: 900;
     color: #F1F0E8;
     -webkit-text-stroke: 2px #11324D;
     z-index: 3000;
+    margin: 20px;
 }
 
 /* 창을 포함하는 컨테이너 */
@@ -36,12 +37,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 /* 창 스타일 */
 .window {
-    width: 500px;
-    height: 400px;
+    width: 460px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: end;
@@ -50,15 +52,13 @@
     border: 2px solid #11324D;
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.3s;
-    position: relative;
     z-index: 3000;
+    transition: transform 0.3s ease-in-out;
 }
 
 .window:hover {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
 }
-
 
 .window-bar {
     width: 100%;
@@ -66,7 +66,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 0 0;;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -75,7 +75,37 @@
 
 .window-bar p {
     color: #11324D;
-    font-size: 16px;
+    font-size: 19px;
+}
+
+
+/* 창 위치 설정 */
+.window.left {
+    position: absolute;
+    top: calc(50% + 35px);
+    left: calc(50% - 80px);
+    transform: translate(-50%, -50%);
+    z-index: 5000;
+}
+
+.window.right {
+    position: absolute;
+    top: calc(50% - 35px);
+    left: calc(50% + 80px);
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+.start-subcontainer:hover .window.left{
+    transform: translate(calc(-50% - 390px), calc(-50% - 55px));
+}
+
+.start-subcontainer:hover .window.middle{
+    transform: translateY(-20px);
+}
+
+.start-subcontainer:hover .window.right{
+    transform: translate(calc(-50% + 390px), calc(-50% + 15px));
 }
 
 /* 왼쪽 창 */
@@ -158,17 +188,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     border-top: 2px solid #11324D;
     background-color: #F7F6F2;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .window-middle h3 {
     font-size: 20px;
     color: #11324D;
     margin: 0;
+    width: 100%;
     text-align: center;
     letter-spacing: 3px;
     font-family: 'VITRO';
@@ -177,13 +208,14 @@
 .window-middle ul {
     list-style: none;
     padding: 0;
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
 .window-middle li {
-    font-size: 16px;
+    font-size: 15px;
     color: #333;
-    line-height: 1.6;
+    line-height: 1.7;
+    letter-spacing: 0.2px;
     position: relative;
     font-weight: 400;
     word-break: keep-all;
@@ -193,7 +225,6 @@
     font-weight: bold;
     color: #D9534F;
     background-color: #F9F2F4;
-    padding: 2px 4px;
     border-radius: 4px;
 }
 
@@ -217,6 +248,8 @@
     flex-direction: column;
     align-items: center;
     z-index: 3000;
+    width: 100%;
+    margin: 10px;
 }
 
 .start-button-container label {
