--- a/src/style/start.css
+++ b/src/style/start.css
@@ -1,7 +1,7 @@
 /* 시작화면 전체 컨테이너 */
 .start-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,18 +22,19 @@
 
 .start-container h1 {
     font-family: 'VITRO';
-    font-size: 50px;
+    font-size: 2.5rem;
     font-weight: 900;
     color: #F1F0E8;
     -webkit-text-stroke: 2px #11324D;
     z-index: 3000;
-    margin: 20px;
+    margin: 0;
 }
 
 /* 창을 포함하는 컨테이너 */
 .start-subcontainer {
     width: 100%;
-    height: 450px;
+    height: auto;
+    margin: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +43,7 @@
 
 /* 창 스타일 */
 .window {
-    width: 460px;
+    width: 455px;
     height: 350px;
     display: flex;
     justify-content: center;
@@ -249,7 +250,6 @@
     align-items: center;
     z-index: 3000;
     width: 100%;
-    margin: 10px;
 }
 
 .start-button-container label {
