--- a/src/style/end.css
+++ b/src/style/end.css
@@ -27,7 +27,10 @@
   text-align: center;
   margin-bottom: 20px;
 }
-
+.header h1{
+  font-size: 5vh;
+  -webkit-text-stroke: 2px #11324D;
+}
 .logo {
   border: 1vh solid#11324C;
   position: absolute; 
