--- a/src/style/end.css
+++ b/src/style/end.css
@@ -4,7 +4,6 @@
                 linear-gradient(190deg, #3b4755 50%, transparent 0%),
                 #6d8191;
   color: #fff;
-  font-family: Arial, sans-serif;
   padding: 20px;  
 }
 
@@ -15,7 +14,9 @@
   margin-right: 3%;
   height: 25vh;
   width: 15vw;
-  @media(height: 700px)
+  @media(height: 700px){
+
+  }
 }
 
 .trophyimage {
@@ -32,8 +33,9 @@
   margin-bottom: 20px;
 }
 .header h1{
-  font-size: 5vh;
+  font-size: 2.5rem;
   -webkit-text-stroke: 2px #11324D;
+  margin: 8px 0;
 }
 .logo {
   border: 1vh solid#11324C;
@@ -55,8 +57,6 @@
   color: #11324C;
   margin: 0;
 }
-
-
 
 .content {
   display: flex;
@@ -130,6 +130,8 @@
   font-weight: bold;
   margin-bottom: 20px;
   border: 5px solid #11324C;  
+  letter-spacing: 2px;
+
 }
 .ranking-item1{
   display: grid;
@@ -140,7 +142,6 @@
   margin-top: 14vh; 
   margin-bottom: 1vh;
   grid-auto-flow: column;
-  
 }
 
 .home-button {
