--- a/src/style/start.css
+++ b/src/style/start.css
@@ -308,12 +308,41 @@
     height: calc(100% - 20px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     border-top: 2px solid #11324D;
     background-color: #F7F6F2;
     border-radius: 10px;
     padding: 20px;
+}
+
+.window-right div {
+    width: 100%;
+    height: 20px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.window-right p {
+    display: inline-block;
+    width: auto;
+    height: 100%;
+    background-color: #1A2130;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 15px 15px 15px 0;
+}
+
+.window-right h3 {
+    margin: 0;
+}
+
+.window-right h3 span{
+    font-size: 1.5rem;
+    color: #D9534F;
+    margin: 0 10px;
 }
 
 /* 게임 시작 버튼 컨테이너 */
