Feat: 게임 오류 수정

--- a/src/style/game.css
+++ b/src/style/game.css
@@ -261,17 +261,18 @@
 }
 
 .inputbox input.invalid {
-  border: 3px solid red;
+  border:   0.25vh solid red;
   outline: none;
   animation: shake 0.5s;
 }
 
 @keyframes shake {
-  0% { transform: translateX(0); }
-  25% { transform: translateX(-5px); }
-  50% { transform: translateX(5px); }
-  75% { transform: translateX(-5px); }
-  100% { transform: translateX(0); }
+  0% { transform: rotate(0deg); }
+  20% { transform: rotate(1deg); }
+  40% { transform: rotate(-1deg); }
+  60% { transform: rotate(1deg); }
+  80% { transform: rotate(-1deg); }
+  100% { transform: rotate(0deg); }
 }
 
 @keyframes fadeOut {
@@ -281,7 +282,7 @@
   }
   100% {
     opacity: 0;
-    transform: translateY(-0.4vh);
+    transform: translateY(-0.3vh);
   }
 }
 
