--- a/src/style/game.css
+++ b/src/style/game.css
@@ -145,10 +145,6 @@
   border-right: 2px solid black;
 }
 
-.rankbox_num::before {
-  transform: rotate(45deg);
-}
-
 .rankbox div p {
   font-weight: 900;
   letter-spacing: 0.35vw;
@@ -160,7 +156,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(196, 255, 196);
   border-top: 1px solid;
   border-bottom: 1px solid;
   border-image: linear-gradient(to right, black -40%, #a4b2c8) 1;
@@ -261,7 +256,7 @@
 }
 
 .inputbox input.invalid {
-  border:   0.25vh solid red;
+  border: 0.4vh solid red;
   outline: none;
   animation: shake 0.5s;
 }
@@ -287,7 +282,6 @@
 }
 
 .hidden-word {
-
   animation: fadeOut 0.4s forwards;
 }
 
@@ -295,4 +289,15 @@
   position: fixed;
   top: 16.5vh;
   right: 15.5vw;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.05);
+  pointer-events: none;
+  z-index: 10000;
 }
